# prismarine-bedrock-ai

./: .gitignore  AGENTS.md  README.md  package.json
docs/tasks/: README.md  TASK-06-crafting-item-stack-request.md  TASK-07-endstone-packet-recorder.md  TASK-08-endstone-recording-scenarios.md  TASK-09-local-prismarine-chunk-126.md  TASK-10-bedrock-protocol-relay-recorder.md  TASK-11-world-rendering-movement-rejection.md  TASK-12-bot-rotation-broadcast.md  TASK-13-e2e-instance-status.md  TASK-14-runtime-physics-world-modes.md  TASK-15-chat-e2e-parity.md  TASK-16-environment-time-weather.md  TASK-17-compact-packet-logging.md  TASK-18-recorded-bds-gym.md  TASK-19-aim-and-shoot-entity.md  TASK-20-available-commands-ready-handshake.md  TASK-21-limited-subchunk-polling.md  TASK-22-mineflayer-pathfinder-adapter-review.md  TASK-23-botstate-categorized-state.md  TASK-24-mineflayer-compat-wrapper.md  TASK-25-sneak-sprint-pose-physics.md  TASK-26-creative-flight-plugin.md  TASK-27-container-live-endstone-parity.md  TASK-27-pathfinder-physics-shim.md  TASK-28-repeat-respawn-endstone.md  TASK-29-api-documentation.md  TASK-30-live-raycast-regression-followup.md  TASK-31-predictive-inventory.md  TEMPLATE.md
scripts/: compare-packet-dbs.js  decode-endstone-packet-recording.js  e2e-live-client.js  e2e-servers.js  index-packet-recording.js  query-packet-db.js  query-packet-recording.js  recorded-bds-gym.js  recorded-bds-relay.js
scripts/endstone-packet-recorder/: pyproject.toml
scripts/endstone-packet-recorder/src/endstone_packet_recorder/: __init__.py  recorder.py
(+43 files in other folders)
