[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-packet-recorder"
version = "0.1.0"
description = "Packet hook recorder for bedrock-test Endstone/BDS runs."
requires-python = ">=3.9"

[project.entry-points."endstone"]
packet-recorder = "endstone_packet_recorder:PacketRecorderPlugin"
